# tic-tac-toe

./: .env.example  .gitignore  Cargo.toml  README.md  build.sh  upload-instantiate.sh
client/: package.json  tailwind.config.js  tsconfig.json
client/@types/: window.d.ts
client/components/: Button.tsx  Cell.tsx  Layout.tsx  Spinner.tsx  Step0.tsx  Step1.tsx  Step2.tsx  Step3.tsx  Step4.tsx  Step5.tsx  Step6.tsx  Table.tsx  TextArea.tsx
client/config/: chains.ts  contracts.ts  endpoints.ts
client/hooks/: useToast.tsx
client/pages/: _app.tsx  index.tsx
client/providers/: CosmosProvider.tsx
client/styles/: globals.css
examples/: schema.rs
schema/: tic-tac-toe.json
schema/raw/: execute.json  query.json  response_to_game_info.json
src/: contract.rs  error.rs  game.rs  lib.rs  tests.rs
