[package]
name = "tic-tac-toe"
version = "0.1.0"
edition = "2021"
description = "CosmWasm built tic-tac-toe game"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
library = []

[dependencies]
cosmwasm-std = { version = "1.1", features = ["staking"] }
cosmwasm-schema = "1.1"
schemars = "0.8"
serde = { version = "1", default-features = false, features = ["derive"] }
sylvia = "0.2.1"
sylvia-derive = "0.2.1"
cw-storage-plus = "1.0.1"
thiserror = { version = "1.0" }
cw2 = "1.0.1"
cw-utils = "1.0.1"


[dev-dependencies]
anyhow = "1"
assert_matches = "1.5.0"

